human_written_tests/WebAssembly/processed_control_flow_validation/test_br_18.wast
(assert_invalid
  (module (func $unbound-label (br 1)))
  "unknown label"
)